; ModuleID = '/home/carl/AnghaBench/linux/net/rxrpc/extr_peer_object.c___rxrpc_put_peer.c'
source_filename = "/home/carl/AnghaBench/linux/net/rxrpc/extr_peer_object.c___rxrpc_put_peer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxrpc_peer = type { %struct.TYPE_2__*, i32, i32, i32 }
%struct.TYPE_2__ = type { %struct.rxrpc_net* }
%struct.rxrpc_net = type { i32 }

@rcu = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rxrpc_peer*)* @__rxrpc_put_peer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__rxrpc_put_peer(%struct.rxrpc_peer* %0) #0 {
  %2 = alloca %struct.rxrpc_peer*, align 8
  %3 = alloca %struct.rxrpc_net*, align 8
  store %struct.rxrpc_peer* %0, %struct.rxrpc_peer** %2, align 8
  %4 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %5 = getelementptr inbounds %struct.rxrpc_peer, %struct.rxrpc_peer* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.rxrpc_net*, %struct.rxrpc_net** %7, align 8
  store %struct.rxrpc_net* %8, %struct.rxrpc_net** %3, align 8
  %9 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %10 = getelementptr inbounds %struct.rxrpc_peer, %struct.rxrpc_peer* %9, i32 0, i32 3
  %11 = call i32 @hlist_empty(i32* %10)
  %12 = call i32 @ASSERT(i32 %11)
  %13 = load %struct.rxrpc_net*, %struct.rxrpc_net** %3, align 8
  %14 = getelementptr inbounds %struct.rxrpc_net, %struct.rxrpc_net* %13, i32 0, i32 0
  %15 = call i32 @spin_lock_bh(i32* %14)
  %16 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %17 = getelementptr inbounds %struct.rxrpc_peer, %struct.rxrpc_peer* %16, i32 0, i32 2
  %18 = call i32 @hash_del_rcu(i32* %17)
  %19 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %20 = getelementptr inbounds %struct.rxrpc_peer, %struct.rxrpc_peer* %19, i32 0, i32 1
  %21 = call i32 @list_del_init(i32* %20)
  %22 = load %struct.rxrpc_net*, %struct.rxrpc_net** %3, align 8
  %23 = getelementptr inbounds %struct.rxrpc_net, %struct.rxrpc_net* %22, i32 0, i32 0
  %24 = call i32 @spin_unlock_bh(i32* %23)
  %25 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %26 = getelementptr inbounds %struct.rxrpc_peer, %struct.rxrpc_peer* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = call i32 @rxrpc_put_local(%struct.TYPE_2__* %27)
  %29 = load %struct.rxrpc_peer*, %struct.rxrpc_peer** %2, align 8
  %30 = load i32, i32* @rcu, align 4
  %31 = call i32 @kfree_rcu(%struct.rxrpc_peer* %29, i32 %30)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @hlist_empty(i32*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @hash_del_rcu(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @rxrpc_put_local(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree_rcu(%struct.rxrpc_peer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
